--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -86,10 +86,11 @@ background: #f5f1ee;
 }
 
 .section-title{
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
-   
-    margin-bottom: 30px;
+   color: hsl(0, 98%, 52%);
+    margin-bottom: 50px;
 }
 
 .section-description{
@@ -110,4 +111,32 @@ background: #f5f1ee;
 font-size: 700;
 font-size: 20px;
 color: #474747;
+}
+/* what i do styles */
+.what-i-do{
+    margin-top: 130px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin: 30;
+    margin-bottom: 20px;
+}
+.skill-description{
+color: #757575;
+}
+/* resume style */
+.resume{
+    margin: 130px;
+    text-align: center;
 }
