--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -138,5 +138,35 @@ color: #757575;
 /* resume style */
 .resume{
     margin: 130px;
+    
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume .title{
+   font-weight: 700;
+   font-size: 25px;
+   color: #474747;
+   margin-bottom: 10px;
+}
+.resume .description{
+    color: #757575;
+
+    
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+
+}
+.resume-button{
+    margin-top: 50;
     text-align: center;
 }
