--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -170,3 +170,32 @@ color: #757575;
     margin-top: 50;
     text-align: center;
 }
+/* contact style */
+.contact .section-title{
+    text-align: left;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background-color: #ddddddfd;
+    padding: 130px 200px;
+}
+/* .contact input, textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%; 
+    padding: 18px 30px;   
+} */
+.contact input[type="text"],input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%; 
+    padding: 18px 30px;   
+}
+
+input{
+    height: 64px;
+}
+.contact a{
+    text-decoration: none;
+}
